test/tests/compiler/17_supporting_dynamic_memory_allocation/invalid_types/incomplete_types/void_array_in_param_type.plx
#  the element type in an array declarator must be complete,
#  so specifying a parameter with type void[3] is illegal,
#  even though it would be adjusted
#  to the valid type void *
pub fn arr(foo: [3]any) i32 {
    return 3
}

pub fn main(none) i32 {
    return 0
}
